### DKPluginProject CMakeLists.txt FILE ###
CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

##### CREATE 3rdParty1 #####
##TODO


##### CREATE 3rdParty2 #####
##TODO


##### CREATE Plugin1 #####
PROJECT(Plugin1)
FILE(GLOB Plugin1_SRC
	${CMAKE_SOURCE_DIR}/Plugin1/*.h
	${CMAKE_SOURCE_DIR}/Plugin1/*.h
	${CMAKE_SOURCE_DIR}/Plugin1/*.c
	${CMAKE_SOURCE_DIR}/Plugin1/*.cpp)
ADD_LIBRARY(Plugin1 STATIC ${Plugin1_SRC})
SET_TARGET_PROPERTIES(Plugin1 PROPERTIES LINKER_LANGUAGE CXX)


##### CREATE Plugin2 #####
PROJECT(Plugin2)
FILE(GLOB Plugin2_SRC 
	${CMAKE_SOURCE_DIR}/Plugin2/*.h
	${CMAKE_SOURCE_DIR}/Plugin2/*.c
	${CMAKE_SOURCE_DIR}/Plugin2/*.cpp)
ADD_LIBRARY(Plugin2 STATIC ${Plugin2_SRC})
SET_TARGET_PROPERTIES(Plugin2 PROPERTIES LINKER_LANGUAGE CXX)


#####  CREATE App #####
PROJECT(App)
FILE(GLOB App_SRC 
	${CMAKE_SOURCE_DIR}/App/*.h
	${CMAKE_SOURCE_DIR}/App/*.c
	${CMAKE_SOURCE_DIR}/App/*.cpp)
	
LIST(APPEND DEBUG_LIBS "")
LIST(APPEND RELEASE_LIBS "")
STRING(REPLACE ";" " " DEBUG_FLAGS "${DEBUG_LINK_FLAGS}")
STRING(REPLACE ";" " " RELEASE_FLAGS "${RELEASE_LINK_FLAGS}")
if(WIN32)
	list(APPEND DEBUG_LINK_FLAGS /SUBSYSTEM:CONSOLE)
	LIST(APPEND RELEASE_LINK_FLAGS /SUBSYSTEM:CONSOLE)
endif()
ADD_EXECUTABLE(App WIN32 ${App_SRC})
TARGET_LINK_LIBRARIES(App ${DEBUG_LIBS} ${RELEASE_LIBS} ${WIN_LIBS})
SET_TARGET_PROPERTIES(App PROPERTIES LINK_FLAGS_DEBUG ${DEBUG_FLAGS} LINK_FLAGS_RELEASE ${RELEASE_FLAGS})
SET_TARGET_PROPERTIES(App PROPERTIES LINKER_LANGUAGE CXX)